@@ -212,6 +212,16 @@ C<method set_session_cache_mode : long ($mode : long);>
 
 Calls native L<SSL_CTX_set_session_cache_mode|https://docs.openssl.org/1.0.2/man3/SSL_CTX_set_session_cache_mode/> function given $mode, and returns its return value.
 
+=head2 set_ecdh_auto
+
+C<method set_ecdh_auto : long ($state : int);>
+
+Calls native L<SSL_CTX_set_ecdh_auto|https://docs.openssl.org/3.1/man3/SSL_CTX_set_tmp_ecdh/> function given $state, and returns its return value.
+
+Exceptions:
+
+If set_ecdh_auto failed, an exception is thrown with C<eval_error_id> set to the basic type ID of L<Net::SSLeay::Error|SPVM::Net::SSLeay::Error> class.
+
 =head2 DESTROY
 
 C<method DESTROY : void ();>
